<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="70dp"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ed_phone"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ed_email"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_mobile_call"
                android:background="@color/colorWhite"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_call"
                android:textAlignment="textStart"
                android:drawablePadding="20dp"
                android:drawableLeft="@drawable/ic_call_black_24dp"
                android:drawableTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btn_send_message"
                android:textAlignment="textStart"
                android:drawablePadding="20dp"
                android:padding="20dp"
                android:drawableLeft="@drawable/ic_message_black_24dp"
                android:background="@color/colorWhite"
                android:drawableTint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_message"
                android:layout_weight="1"
                android:textAllCaps="false"/>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/user"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

</RelativeLayout>