<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/borders">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="8dp"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/et_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Id"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"
                        android:typeface="sans" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/ed_name"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"
                        android:typeface="sans" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ed_surname"
                        android:imeOptions="actionNext"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="18sp"
                        android:typeface="sans" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ed_phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:textSize="18sp"
                        android:typeface="sans" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ed_email"
                        android:imeOptions="actionGo"
                        android:inputType="textEmailAddress"
                        android:textSize="18sp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:typeface="sans" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_ui"
                    android:padding="10dp"
                    android:text="@string/btn_save"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </ScrollView>

    </RelativeLayout>


</LinearLayout>